# tap-meltano-cloud

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
tap_meltano_cloud/: __main__.py  streams.py  tap.py
tap_meltano_cloud/streams/: __init__.py  base.py  by_workspace.py  me.py
tap_meltanocloud/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_meltanocloud/openapi/: __init__.py  openapi.json
tests/: __init__.py  test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[channels].json  test_catalog_changes[datacomponents].json  test_catalog_changes[datasets].json  test_catalog_changes[datastores].json  test_catalog_changes[jobs].json  test_catalog_changes[pipeline_jobs].json  test_catalog_changes[pipeline_metrics].json  test_catalog_changes[pipelines].json  test_catalog_changes[workspaces].json
