[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.5",
  "hatchling>=1,<2",
]

[project]
name = "tap-meltano-cloud"
description = "Singer tap for Meltano Cloud, built with the Meltano Singer SDK."
readme = "README.md"
keywords = [
  "ELT",
  "Meltano",
  "Meltano Cloud",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "requests~=2.33.0",
  "singer-sdk~=0.54.0a6",
  "typing-extensions>=4.5; python_version<'3.13'",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "emondragon@meltano.com"
[project.optional-dependencies]
s3 = [
  "s3fs>=2026.1",
]
[project.scripts]
# CLI declaration
tap-meltano-cloud = "tap_meltano_cloud.tap:TapMeltanoCloud.cli"

[dependency-groups]
dev = [
  { include-group = "test" },
]
test = [
  "pytest>=9",
  "pytest-github-actions-annotate-failures>=0.3",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.19.1",
  "ty>=0.0.18",
  "types-requests",
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.ruff]
required-version = ">=0.15"
line-length = 120
[tool.ruff.lint]
future-annotations = true
ignore = [
  "COM812", # missing-trailing-comma
  "FIX",    # allow TODO comments
]
select = [ "ALL" ]
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [
  "-v",
  "--durations=10",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
  "once:No records were available to test:UserWarning",
  "once:Fields in transformed catalog but not in records:UserWarning",
  "once:Python 3.10 will reach its end of life:FutureWarning",
]
log_level = "INFO"
minversion = "9.0"
testpaths = [
  "tests",
]
xfail_strict = true

[tool.tox]
requires = [
  "tox>=4.52",
  "tox-uv",
]
env_list = [
  "typing",
  { product = [
    { prefix = "3.", start = 10 },
  ] },
]
[tool.tox.env.typing]
description = "type checks with mypy and ty"
dependency_groups = [ "test", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_meltano_cloud", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_meltano_cloud", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
description = "run tests on Python {env_name}"
runner = "uv-venv-lock-runner"
pass_env = [
  "GITHUB_*",
  "TAP_MELTANO_CLOUD_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
